--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Sushi</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Sushi</h1>
-</body>
+    <img
+      src="https://images.unsplash.com/photo-1579871494447-9811cf80d66c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2970&q=80"
+      alt="Sushi on a plate"
+      width="50%"
+      height="50%"
+    />
+    <h2>Description</h2>
+    <p>
+      Sushi can be rolled by hand, but for perfectly formed rolls use a bamboo
+      sushi mat. They are available from supermarkets and Asian grocers. Use a
+      combination of carrot, green onions and red capsicum as a vegetarian
+      alternative to the salmon. Alternatively, use sushi-grade fresh tuna or
+      tinned drained tuna combined with Japanese mayonnaise instead of salmon.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 1/2 cups (540g) koshihikari rice</li>
+      <li>3 3/4 cups (935ml) cold water</li>
+      <li>1/2 cup (125ml) rice vinegar</li>
+      <li>2 tbsp caster sugar</li>
+      <li>1/2 tsp salt</li>
+      <li>6 nori sheets</li>
+      <li>200g fresh salmon, cut into 1cm-thick batons</li>
+      <li>1 avocado, halved, stoned, peeled, thinly sliced</li>
+      <li>Light soy sauce, to serve</li>
+      <li>Wasabi paste, to serve</li>
+      <li>Pickled ginger, to serve</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Place the rice in a sieve. Rinse under cold running water, to remove any
+        excess starch, until water runs clear. Place the rice and water in a
+        large saucepan, covered, over high heat. Bring to the boil. Reduce heat
+        to low and cook, covered, for 12 minutes or until all the water is
+        absorbed. Remove from heat. Set aside, covered, for 10 minutes to cool
+        slightly.
+      </li>
+      <li>
+        Combine the vinegar , sugar and salt in a small bowl. Transfer the rice
+        to a large glass bowl. Use a wooden paddle to break up rice lumps while
+        gradually adding the vinegar mixture, gently folding to combine.
+        Continue folding and fanning the rice for 15 minutes or until rice is
+        cool.
+      </li>
+      <li>
+        Place a sushi mat on a clean surface with slats running horizontally.
+        Place a nori sheet, shiny-side down, on the mat. Use wet hands to spread
+        one-sixth of the rice over the nori sheet, leaving a 3cm-wide border
+        along the edge furthest away from you.
+      </li>
+      <li>
+        Place salmon and avocado along the centre of the rice. Hold filling in
+        place while rolling the mat over to enclose rice and filling. Repeat
+        with remaining nori, rice, salmon and avocado. Step 5 Use a sharp knife
+        to slice sushi widthways into 1.5cm-thick slices. Place on serving
+        dishes with soy sauce , wasabi and pickled ginger , if desired.
+      </li>
+    </ol>
+  </body>
 </html>
