--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="/recipes/sushi.html">Sushi</a></li>
       <li><a href="/recipes/overnightOats.html">Overnight Oats</a></li>
-      <li><a href="/recipes/Steak.html">Steak</a></li>
+      <li><a href="/recipes/steak.html">Steak</a></li>
     </ul>
   </body>
 </html>
