--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="/recipes/sushi.html">Sushi</a></li>
-      <li><a href="/recipes/overnightOats.html">Overnight Oats</a></li>
-      <li><a href="/recipes/steak.html">Steak</a></li>
+      <li><a href="./recipes/sushi.html">Sushi</a></li>
+      <li><a href="./recipes/overnightOats.html">Overnight Oats</a></li>
+      <li><a href="./recipes/steak.html">Steak</a></li>
     </ul>
   </body>
 </html>
